# block83

./: .gitignore  block83.py  notes.txt  pyproject.toml  task.cmd
block83.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stuff/: app.bf30fdc0ec187991a508.js  manifest.a3aaff3ec4b6699bfde7.js  pretty_page.html  vendor.7f9aefb9ae6501c0db9b.js
